Ajuste pequenos nos comentários

--- a/src/model_training.ipynb
+++ b/src/model_training.ipynb
@@ -261,14 +261,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Definir o tamanho de imagem para ResNet-50 (padrão)\n",
         "IMAGE_SIZE = 224\n",
         "\n",
-        "# Carregar a base MobileNetV2 (pré-treinada no ImageNet, sem o topo)\n",
+        "# Carregar a base MobileNetV2\n",
         "input_tensor = Input(shape=(IMAGE_SIZE, IMAGE_SIZE, 3))\n",
         "\n",
         "base_model = MobileNetV2(\n",
@@ -278,11 +278,11 @@
         "    include_top=False  # Remove a camada de classificação original\n",
         ")\n",
         "\n",
-        "# Congelar as camadas iniciais (Fase de Transfer Learning)\n",
+        "# Congelar as camadas iniciais (Transfer Learning)\n",
         "for layer in base_model.layers:\n",
         "    layer.trainable = False\n",
         "\n",
-        "# Adicionar o 'Head' de Regressão (o mesmo que funcionou antes)\n",
+        "# Adicionar o 'Head' de Regressão\n",
         "x = base_model.output\n",
         "x = GlobalAveragePooling2D()(x) # Reduz as dimensões para um vetor\n",
         "x = Dense(512, activation='relu')(x)\n",
